<resources>
    <string name="app_name">My Application1</string>
    <string name="test_name">こんにちは</string>
    <string name="btn1">OK</string>
    <string name="btn2">画面1へ</string>
    <string name="btn3">追加</string>
    <string name="btn4">画面2へ</string>
    <string name="btn5">生成</string>
    <string name="btn6">データ受渡</string>
    <string name="chk1">チェック項目</string>
    <string name="rbtn1">ラジオボタン</string>
    <string name="rbtn2">トースト</string>
    <string name="rbtn3">ログ出力</string>
    <string name="chip1">Chip</string>
    <string name="msg1">テスト文字列</string>
    <string name="msg2">文字入力</string>
    <string name="msg3">OKボタンが押されました</string>
    <string name="title1">Sub-Activity-1</string>
    <string-array name="spn1">
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
    </string-array>
    <string name="spn_prompt">アイテムを選択してください</string>
</resources>