<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button5"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="96dp"
        android:onClick="toSub2"
        android:text="@string/btn4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toEndOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="96dp"
        android:onClick="toSub1"
        android:text="@string/btn2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:onClick="toSub3"
        android:text="@string/btn6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="RadioButton"
        app:layout_constraintStart_toStartOf="@+id/m_button"
        app:layout_constraintTop_toBottomOf="@+id/m_button"
        tools:text="@string/rbtn1" />

    <Button
        android:id="@+id/m_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:onClick="btn_onClick"
        android:text="@string/btn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/m_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.08" />

    <com.google.android.material.chip.Chip
        android:id="@+id/m_chip"
        android:layout_width="101dp"
        android:layout_height="51dp"
        android:layout_marginTop="36dp"
        android:text="@string/chip1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toEndOf="@+id/m_button"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="clip" />

    <CheckBox
        android:id="@+id/m_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/chk1"
        app:layout_constraintStart_toStartOf="@+id/m_chip"
        app:layout_constraintTop_toBottomOf="@+id/m_chip" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:onClick="toast_onClick"
        android:text="@string/rbtn2"
        app:layout_constraintStart_toStartOf="@+id/radioButton"
        app:layout_constraintTop_toBottomOf="@+id/radioButton" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="444dp"
        android:onClick="log_onClick"
        android:text="@string/rbtn3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/m_checkBox"
        app:layout_constraintTop_toBottomOf="@+id/m_checkBox"
        app:layout_constraintVertical_bias="0.416" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="156dp"
        android:layout_height="132dp"
        android:layout_marginBottom="176dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_1" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="290dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/msg2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>